# case-project

./: .gitignore  CMakeLists.txt  CMakePresets.json  config.h.in  external_directory.h.in  notes.md  readme.md
application/: CMakeLists.txt  main.cpp
benchmark/: CMakeLists.txt  main.cpp
benchmark/cache/: CMakeLists.txt
benchmark/cache/quickly/: CMakeLists.txt  main.cpp
benchmark/cache/slowly/: CMakeLists.txt  main.cpp
benchmark/include/: init_data.h
builds/linux-googletest-debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl
builds/linux/linux-benchmark-debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  install_manifest.txt
builds/linux/linux-benchmark-debug/benchmark/: CTestTestfile.cmake  Makefile  cmake_install.cmake
builds/linux/linux-benchmark-release/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  install_manifest.txt
builds/linux/linux-benchmark-release/benchmark/: CTestTestfile.cmake  Makefile  cmake_install.cmake
builds/linux/linux-googletest-debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  install_manifest.txt
builds/linux/linux-googletest-debug/Testing/: TAG
builds/linux/linux-googletest-debug/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
builds/linux/linux-googletest-release/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  install_manifest.txt
builds/linux/linux-googletest-release/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
builds/windows/vs-2019-benchmark/: ALL_BUILD.vcxproj  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  case-project.sln  cmake_install.cmake  install_manifest.txt
builds/windows/vs-2019-googletest/: ALL_BUILD.vcxproj  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  case-project.sln  cmake_install.cmake  install_manifest.txt
builds/windows/windows-benchmark/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  case-project.sln  cmake_install.cmake  install_manifest.txt
builds/windows/windows-googletest/: ALL_BUILD.vcxproj  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  case-project.sln  cmake_install.cmake  install_manifest.txt
cmake/: add_benchmark_user_module.cmake  add_test_user_module.cmake  check_environment.cmake  cmake_project.cmake  download_environment_windows.cmake  exporting.cmake  user_functions.cmake
googletest/: CMakeLists.txt  main.cpp
gtest/: CMakeLists.txt  gtest_files.h.in  readme.md
gtest/example0000/: CMakeLists.txt
gtest/example0001/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
presets/: environment.json  linux.json  name.json  test.json  windows.json  windows_build.json
presets/linux/: build.json  config.json  environment.json  linux.json  package.json  paths.json
presets/linux/application/: build.json  config.json  package.json  test.json  workflow.json
presets/linux/benchmark/: build.json  config.json  package.json  test.json  workflow.json
presets/linux/googletest/: build.json  config.json  package.json  test.json  workflow.json
presets/linux/lib/: workflow.json
presets/linux/test/: test.json  workflow.json
presets/msys/: msys.json
presets/msys/application/: build.json  config.json  package.json  test.json  workflow.json
presets/msys/benchmark/: build.json  config.json  package.json  test.json  workflow.json
presets/msys/googletest/: build.json  config.json  package.json  test.json  workflow.json
presets/windows/: environment.json  paths.json  windows.json
presets/windows/application/: build.json  config.json  package.json  test.json  workflow.json
presets/windows/benchmark/: build.json  config.json  package.json  test.json  workflow.json
presets/windows/googletest/: build.json  config.json  package.json  test.json  workflow.json
presets/windows/vs-2019/: build.json  config.json  generator.json  package.json
share/: .$general-struct.drawio.dtmp  general-struct.drawio
test/: CMakeLists.txt
utils/: CMakeLists.txt  main.cpp
(+274 files in other folders)
