set(NAME application_${PROJECT_NAME})
add_executable(${NAME} main.cpp)

target_link_libraries(${NAME} PUBLIC ${PROJECT_NAME})
set_target_properties(${NAME} PROPERTIES
    FOLDER Application
    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}
)
add_test(NAME ${NAME} COMMAND ${NAME})